// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreadsActivityCentre renders notifications matching the snapshot 1`] = `
<div
  aria-labelledby="radix-:r33:"
  aria-orientation="vertical"
  class="_menu_19sse_8"
  data-align="start"
  data-orientation="vertical"
  data-radix-menu-content=""
  data-side="top"
  data-state="open"
  dir="ltr"
  id="radix-:r34:"
  role="menu"
  style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); pointer-events: auto;"
  tabindex="-1"
>
  <h3
    class="_typography_6v6n8_153 _font-body-sm-semibold_6v6n8_36 _menu-title_1sgvx_8 _title_19sse_74"
    id=":r3b:"
  >
    Threads activity
  </h3>
  <div
    class="mx_ThreadsActivityCentre_rows"
  >
    <button
      class="mx_ThreadsActivityCentreRow _item_dyt4i_8 _interactive_dyt4i_26"
      data-kind="primary"
      data-orientation="vertical"
      data-radix-collection-item=""
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="_icon_dyt4i_50"
      >
        <span
          class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
          data-color="3"
          data-testid="avatar-img"
          data-type="round"
          role="presentation"
          style="--cpd-avatar-size: 32px;"
        >
          T
        </span>
      </div>
      <span
        class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_dyt4i_34"
      >
        This is a real highlight
      </span>
      <svg
        aria-hidden="true"
        class="_nav-hint_dyt4i_59"
        fill="currentColor"
        height="24"
        viewBox="8 0 8 24"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
        />
      </svg>
      <div
        class="mx_NotificationBadge mx_NotificationBadge_visible mx_NotificationBadge_level_highlight mx_NotificationBadge_dot"
      >
        <span
          class="mx_NotificationBadge_count"
        />
      </div>
    </button>
    <button
      class="mx_ThreadsActivityCentreRow _item_dyt4i_8 _interactive_dyt4i_26"
      data-kind="primary"
      data-orientation="vertical"
      data-radix-collection-item=""
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="_icon_dyt4i_50"
      >
        <span
          class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
          data-color="2"
          data-testid="avatar-img"
          data-type="round"
          role="presentation"
          style="--cpd-avatar-size: 32px;"
        >
          A
        </span>
      </div>
      <span
        class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_dyt4i_34"
      >
        A notification
      </span>
      <svg
        aria-hidden="true"
        class="_nav-hint_dyt4i_59"
        fill="currentColor"
        height="24"
        viewBox="8 0 8 24"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
        />
      </svg>
      <div
        class="mx_NotificationBadge mx_NotificationBadge_visible mx_NotificationBadge_level_notification mx_NotificationBadge_dot"
      >
        <span
          class="mx_NotificationBadge_count"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`ThreadsActivityCentre should close the release announcement when the TAC button is clicked 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="mx_ThreadsActivityCentre_container"
    >
      <button
        aria-controls="radix-:r1d:"
        aria-disabled="false"
        aria-expanded="true"
        aria-haspopup="menu"
        aria-label="Threads"
        aria-labelledby=":r1e:"
        class="_icon-button_m2erp_8 mx_ThreadsActivityCentreButton"
        data-state="open"
        id="radix-:r1c:"
        role="button"
        style="--cpd-icon-button-size: 32px;"
        tabindex="0"
        type="button"
      >
        <div
          class="_indicator-icon_zr2a0_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            class="mx_ThreadsActivityCentreButton_Icon"
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 3h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H6l-2.293 2.293c-.63.63-1.707.184-1.707-.707V5a2 2 0 0 1 2-2m3 7h10q.424 0 .712-.287A.97.97 0 0 0 18 9a.97.97 0 0 0-.288-.713A.97.97 0 0 0 17 8H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 9q0 .424.287.713Q6.576 10 7 10m0 4h6q.424 0 .713-.287A.97.97 0 0 0 14 13a.97.97 0 0 0-.287-.713A.97.97 0 0 0 13 12H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 13q0 .424.287.713Q6.576 14 7 14"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-floating-ui-portal=""
    id=":r1i:"
  >
    <div
      class="_tooltip_6ode6_8 _invisible_6ode6_21"
      data-floating-ui-focusable=""
      style="position: absolute; left: 0px; top: 0px; transform: translate(6px, 5px);"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class="_arrow_6ode6_33"
        height="10"
        style="position: absolute; pointer-events: none; right: calc(100% - 0px); transform: rotate(90deg); top: -1px;"
        viewBox="0 0 10 10"
        width="10"
      >
        <path
          d="M0,0 H10 L5,6 Q5,6 5,6 Z"
          stroke="none"
        />
        <clippath
          id=":r1j:"
        >
          <rect
            height="10"
            width="10"
            x="0"
            y="0"
          />
        </clippath>
      </svg>
      <span
        id=":r1e:"
      >
        Threads
      </span>
    </div>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    dir="ltr"
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, -8px); min-width: max-content; --radix-popper-transform-origin: 0% 0px; --radix-popper-available-width: 0px; --radix-popper-available-height: -8px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px;"
  >
    <div
      aria-labelledby="radix-:r1c:"
      aria-orientation="vertical"
      class="_menu_19sse_8"
      data-align="start"
      data-orientation="vertical"
      data-radix-menu-content=""
      data-side="top"
      data-state="open"
      dir="ltr"
      id="radix-:r1d:"
      role="menu"
      style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); pointer-events: auto;"
      tabindex="-1"
    >
      <h3
        class="_typography_6v6n8_153 _font-body-sm-semibold_6v6n8_36 _menu-title_1sgvx_8 _title_19sse_74"
        id=":r1k:"
      >
        Threads activity
      </h3>
      <div
        class="mx_ThreadsActivityCentre_rows"
      >
        <div
          class="mx_ThreadsActivityCentre_emptyCaption"
        >
          You don't have rooms with thread notifications yet.
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`ThreadsActivityCentre should match snapshot when empty 1`] = `
<div
  aria-labelledby="radix-:r3n:"
  aria-orientation="vertical"
  class="_menu_19sse_8"
  data-align="start"
  data-orientation="vertical"
  data-radix-menu-content=""
  data-side="top"
  data-state="open"
  dir="ltr"
  id="radix-:r3o:"
  role="menu"
  style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); pointer-events: auto;"
  tabindex="-1"
>
  <h3
    class="_typography_6v6n8_153 _font-body-sm-semibold_6v6n8_36 _menu-title_1sgvx_8 _title_19sse_74"
    id=":r3v:"
  >
    Threads activity
  </h3>
  <div
    class="mx_ThreadsActivityCentre_rows"
  >
    <div
      class="mx_ThreadsActivityCentre_emptyCaption"
    >
      You don't have rooms with thread notifications yet.
    </div>
  </div>
</div>
`;

exports[`ThreadsActivityCentre should order the room with the same notification level by most recent 1`] = `
<div
  aria-labelledby="radix-:r40:"
  aria-orientation="vertical"
  class="_menu_19sse_8"
  data-align="start"
  data-orientation="vertical"
  data-radix-menu-content=""
  data-side="top"
  data-state="open"
  dir="ltr"
  id="radix-:r41:"
  role="menu"
  style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); pointer-events: auto;"
  tabindex="-1"
>
  <h3
    class="_typography_6v6n8_153 _font-body-sm-semibold_6v6n8_36 _menu-title_1sgvx_8 _title_19sse_74"
    id=":r48:"
  >
    Threads activity
  </h3>
  <div
    class="mx_ThreadsActivityCentre_rows"
  >
    <button
      class="mx_ThreadsActivityCentreRow _item_dyt4i_8 _interactive_dyt4i_26"
      data-kind="primary"
      data-orientation="vertical"
      data-radix-collection-item=""
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="_icon_dyt4i_50"
      >
        <span
          class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
          data-color="5"
          data-testid="avatar-img"
          data-type="round"
          role="presentation"
          style="--cpd-avatar-size: 32px;"
        >
          T
        </span>
      </div>
      <span
        class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_dyt4i_34"
      >
        This is a third real highlight
      </span>
      <svg
        aria-hidden="true"
        class="_nav-hint_dyt4i_59"
        fill="currentColor"
        height="24"
        viewBox="8 0 8 24"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
        />
      </svg>
      <div
        class="mx_NotificationBadge mx_NotificationBadge_visible mx_NotificationBadge_level_highlight mx_NotificationBadge_dot"
      >
        <span
          class="mx_NotificationBadge_count"
        />
      </div>
    </button>
    <button
      class="mx_ThreadsActivityCentreRow _item_dyt4i_8 _interactive_dyt4i_26"
      data-kind="primary"
      data-orientation="vertical"
      data-radix-collection-item=""
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="_icon_dyt4i_50"
      >
        <span
          class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
          data-color="3"
          data-testid="avatar-img"
          data-type="round"
          role="presentation"
          style="--cpd-avatar-size: 32px;"
        >
          T
        </span>
      </div>
      <span
        class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_dyt4i_34"
      >
        This is a real highlight
      </span>
      <svg
        aria-hidden="true"
        class="_nav-hint_dyt4i_59"
        fill="currentColor"
        height="24"
        viewBox="8 0 8 24"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
        />
      </svg>
      <div
        class="mx_NotificationBadge mx_NotificationBadge_visible mx_NotificationBadge_level_highlight mx_NotificationBadge_dot"
      >
        <span
          class="mx_NotificationBadge_count"
        />
      </div>
    </button>
    <button
      class="mx_ThreadsActivityCentreRow _item_dyt4i_8 _interactive_dyt4i_26"
      data-kind="primary"
      data-orientation="vertical"
      data-radix-collection-item=""
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="_icon_dyt4i_50"
      >
        <span
          class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
          data-color="4"
          data-testid="avatar-img"
          data-type="round"
          role="presentation"
          style="--cpd-avatar-size: 32px;"
        >
          T
        </span>
      </div>
      <span
        class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_dyt4i_34"
      >
        This is a second real highlight
      </span>
      <svg
        aria-hidden="true"
        class="_nav-hint_dyt4i_59"
        fill="currentColor"
        height="24"
        viewBox="8 0 8 24"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
        />
      </svg>
      <div
        class="mx_NotificationBadge mx_NotificationBadge_visible mx_NotificationBadge_level_highlight mx_NotificationBadge_dot"
      >
        <span
          class="mx_NotificationBadge_count"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`ThreadsActivityCentre should render the release announcement 1`] = `
<body>
  <div>
    <div
      class="mx_ThreadsActivityCentre_container"
    >
      <button
        aria-controls=":ra:"
        aria-describedby=":ra:"
        aria-expanded="true"
        aria-haspopup="dialog"
        aria-label="Threads"
        aria-labelledby=":rc:"
        class="_icon-button_m2erp_8 mx_ThreadsActivityCentreButton"
        data-floating-ui-inert=""
        role="button"
        style="--cpd-icon-button-size: 32px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_zr2a0_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            class="mx_ThreadsActivityCentreButton_Icon"
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 3h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H6l-2.293 2.293c-.63.63-1.707.184-1.707-.707V5a2 2 0 0 1 2-2m3 7h10q.424 0 .712-.287A.97.97 0 0 0 18 9a.97.97 0 0 0-.288-.713A.97.97 0 0 0 17 8H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 9q0 .424.287.713Q6.576 10 7 10m0 4h6q.424 0 .713-.287A.97.97 0 0 0 14 13a.97.97 0 0 0-.287-.713A.97.97 0 0 0 13 12H7a.97.97 0 0 0-.713.287A.97.97 0 0 0 6 13q0 .424.287.713Q6.576 14 7 14"
            />
          </svg>
        </div>
      </button>
      <span
        aria-hidden="true"
        data-floating-ui-inert=""
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
        tabindex="-1"
      />
      <span
        data-floating-ui-focus-guard=""
        data-type="outside"
        role="button"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
        tabindex="0"
      />
      <span
        aria-owns=":rh:"
        data-floating-ui-inert=""
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      />
      <span
        data-floating-ui-focus-guard=""
        data-type="outside"
        role="button"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
        tabindex="0"
      />
    </div>
  </div>
  <div
    data-floating-ui-inert=""
    data-floating-ui-portal=""
    id=":rg:"
  >
    <div
      class="_tooltip_6ode6_8 _invisible_6ode6_21"
      data-floating-ui-focusable=""
      style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class="_arrow_6ode6_33"
        height="10"
        style="position: absolute; pointer-events: none; right: calc(100% - 0px); transform: rotate(90deg);"
        viewBox="0 0 10 10"
        width="10"
      >
        <path
          d="M0,0 H10 L5,6 Q5,6 5,6 Z"
          stroke="none"
        />
        <clippath
          id=":ri:"
        >
          <rect
            height="10"
            width="10"
            x="0"
            y="0"
          />
        </clippath>
      </svg>
      <span
        id=":rc:"
      >
        Threads
      </span>
    </div>
  </div>
  <div
    data-floating-ui-portal=""
    id=":rh:"
  >
    <span
      data-floating-ui-focus-guard=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
    <div
      aria-describedby=":r9:"
      aria-labelledby=":r8:"
      class="_content_3xq91_8"
      data-floating-ui-focusable=""
      id=":ra:"
      role="dialog"
      style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class="_arrow_3xq91_53"
        height="20"
        style="position: absolute; pointer-events: none; right: calc(100% - 0px); transform: rotate(90deg);"
        viewBox="0 0 20 20"
        width="20"
      >
        <path
          d="M0,0 H20 L10,12 Q10,12 10,12 Z"
          stroke="none"
        />
        <clippath
          id=":rj:"
        >
          <rect
            height="20"
            width="20"
            x="0"
            y="0"
          />
        </clippath>
      </svg>
      <h3
        class="_typography_6v6n8_153 _font-body-lg-semibold_6v6n8_74 _header_3xq91_37"
        id=":r8:"
      >
        Threads Activity Centre
      </h3>
      <span
        class="_typography_6v6n8_153 _font-body-sm-regular_6v6n8_31 _description_3xq91_43"
        id=":r9:"
      >
        Threads notifications have moved, find them here from now on.
      </span>
      <button
        class="_button_vczzf_8 _button_3xq91_48"
        data-kind="secondary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        OK
      </button>
    </div>
    <span
      data-floating-ui-focus-guard=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</body>
`;
